<resources translatable="false">
    <string name="app_name">MyStudy_2</string>
    <string name="main_text">Lessons and homeworks 41 - 50</string>
    <string name="lessons">Lessons</string>
    <string name="homeworks">Homeworks</string>
    <string name="text_hw">Welcome to page Homeworks</string>
    <string name="btn_hw_41">#41 Drawable menu with fragments</string>
    <string name="btn_hw_42">"#42  Notifications "</string>
    <string name="text_lessons">Welcome to page lessons 41-50</string>
    <string name="btn_41">#41</string>
    <string name="btn_42">#42 Recycler View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_1_text">Fragment 1</string>
    <string name="fragment_2_text">Fragment 2</string>
    <string name="fragment_3_text">Fragment 3</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="fragment_3">Fragment 3</string>
    <string name="fragments">Fragments</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">close</string>
    <string name="fragment1">Fragment1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="fragment3">Fragment 3</string>
    <string name="view_holder" />
    <string name="noteficatoin"></string>
    <string name="btn_note">Note</string>
    <string name="btn_43">#43 Recycler View Layout Manager</string>
    <string name="btn_hw_43">#43 Recycler View EditText
    #44 RecyclerView with Delete Function</string>
    <string name="input_data">Input Data</string>
    <string name="submit_data">Submit</string>
    <string name="btn_44">#44 RecyclerView with ClickListener</string>
    <string name="text_1" />
    <string name="text_2" />
    <string name="text_3" />
    <string name="details">Details</string>
    <string name="btn_hw_45">#45</string>
    <string name="add_btn">Add</string>
    <string name="btn_hw_46">#46 Shared Preferences</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_hw_47">#47 Receiver</string>
    <string name="btn_send">Send</string>
    <string name="receiver">Receiver</string>
    <string name="btn_hw_49">#49 Simple Service</string>
    <string name="service">Service</string>
    <string name="text_service">Text Service</string>
</resources>