<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_hw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hw"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:textSize="35sp"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_hw_41"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_hw_41" />
    <Button
        android:id="@+id/btn_hw_42"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_hw_42" />
    <Button
        android:id="@+id/btn_hw_43"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_hw_43" />

    <Button
        android:id="@+id/btn_hw_46"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_hw_46" />
    <Button
        android:id="@+id/btn_hw_47"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_hw_47" />
</LinearLayout>